# TileEditor

./: CMakeLists.txt  README.txt  compile_commands.json
include/: cell.h  component.h  crop_component.h  input_component.h  mouse_selector_component.h  output_canvas.h  tile_file.h  tile_io.h  tile_selector.h  util.h
src/: cell.cpp  crop_component.cpp  input_component.cpp  main.cpp  mouse_selector_component.cpp  output_canvas.cpp  tile_file.cpp  tile_io.cpp  tile_selector.cpp  util.cpp
